apps/open-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: apps
  labels:
    app: open-webui
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: apps
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    matchLabels:
      app: open-webui
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: open-webui
        app.kubernetes.io/name: open-webui
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: apps
        app.kubernetes.io/managed-by: kustomize
    spec:
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:0.11.4 # {"$imagepolicy": "flux-system:open-webui-image-policy"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: open-webui-data
              mountPath: /app/backend/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
      volumes:
        - name: open-webui-data
          persistentVolumeClaim:
            claimName: open-webui-pvc
